// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueCsvImport has expected html 1`] = `
<div
  class="vue-csv-uploader"
>
  <div
    class="form"
  >
    <div
      class="vue-csv-uploader-part-one"
    >
      <div
        class="form-check form-group csv-import-checkbox"
      >
        <input
          class="form-check-input"
          id="hasHeaders"
          type="checkbox"
          value=""
        />
         
        <label
          class="form-check-label"
          for="hasHeaders"
        >
          
                        File Has Headers
                    
        </label>
      </div>
       
      <div
        class="form-group csv-import-file"
      >
        <input
          class="form-control-file"
          name="csv"
          type="file"
        />
      </div>
       
      <div
        class="form-group"
      >
        <input
          class="btn btn-primary"
          type="submit"
          value="Next"
        />
      </div>
    </div>
     
    <div
      class="vue-csv-uploader-part-two"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`VueCsvImport headers prop removes checkbox and not use headers 1`] = `
<div
  class="vue-csv-uploader"
>
  <div
    class="form"
  >
    <div
      class="vue-csv-uploader-part-one"
    >
      <!---->
       
      <div
        class="form-group csv-import-file"
      >
        <input
          class="form-control-file"
          name="csv"
          type="file"
        />
      </div>
       
      <div
        class="form-group"
      >
        <input
          class="btn btn-primary"
          type="submit"
          value="Next"
        />
      </div>
    </div>
     
    <div
      class="vue-csv-uploader-part-two"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`VueCsvImport headers prop removes checkbox and use headers 1`] = `
<div
  class="vue-csv-uploader"
>
  <div
    class="form"
  >
    <div
      class="vue-csv-uploader-part-one"
    >
      <!---->
       
      <div
        class="form-group csv-import-file"
      >
        <input
          class="form-control-file"
          name="csv"
          type="file"
        />
      </div>
       
      <div
        class="form-group"
      >
        <input
          class="btn btn-primary"
          type="submit"
          value="Next"
        />
      </div>
    </div>
     
    <div
      class="vue-csv-uploader-part-two"
    >
      <!---->
    </div>
  </div>
</div>
`;
